# ChangeLog for media-libs/xpm
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/media-libs/xpm/ChangeLog,v 1.2 2002/07/31 16:19:10 seemant Exp $

*xpm-3.4k

  16 Mar 2002; Seemant Kulleen <seemant@gentoo.org> xpm-2.4k.ebuild :

  New package.   XPM is an image format for X.