@@ -1,8 +1,17 @@
 # ChangeLog for media-libs/xpm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xpm/ChangeLog,v 1.2 2002/07/31 16:19:10 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xpm/ChangeLog,v 1.3 2002/08/05 16:51:51 seemant Exp $
 
-*xpm-3.4k
+*xpm-3.4k-r1 (05 Aug 2002)
+
+  05 Aug 2002; Seemant Kulleen <seemant@gentoo.org> xpm-2.4k-r1.ebuild
+  files/digest-xpm-2.4k-r1 :
+
+  Added CFLAGS from /etc/make.conf into make process, to override package's
+  optimisations.  Closes bug report #5801 by 
+  chrb@dcs.ed.ac.uk (Chris Bainbridge)
+
+*xpm-3.4k (16 Mar 2002)
 
   16 Mar 2002; Seemant Kulleen <seemant@gentoo.org> xpm-2.4k.ebuild :
 
